# whispy

./: Makefile  README.md  pyproject.toml
.github/: renovate.json5
.github/workflows/: ci.yaml
whispy/: __main__.py  notify.py  record.py  transcribe.py  transform.py  typewriter.py
